# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2015-09-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add msgpack as a supported content-type
    * Add eunit tests to cloudi_string
    * Add cloudi_service_http_rest to simplify REST API function creation

2015-09-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix installation path bug
    * Update examples description

2015-09-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix examples so that the 1.4.0 cloudi_service behaviour interface
      is used
    * Fix service application header file usage of cloudi_service behaviour
    * Update pgsql

2015-08-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the compression configuration argument to cloudi_service_queue
      to provide a zlib compression level
      (defaults to 0, no compression, can be 0..9)
    * Improve cloudi_service_http_cowboy type specifications
      and the processing of queued requests
    * Add support in cloudi_service_tcp for bidirectional CloudI
      service requests, including the protocol_id_check configuration
      argument to avoid blocking on CloudI service request responses
      from the socket
    * Update pqueue and improve pqueue4 type specification

2015-08-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:duo_mode/1 to test whether the service
      is configured with the duo_mode service configuration option
    * Enforce duo_mode is true when cloudi_service_tcp or
      cloudi_service_udp is used, due to socket ownership
    * Specify the msgpack map type based on whether the Erlang
      version is 18.x or pre-18.x (to pick map or jsx format, respectively)
    * Document the usage of an 'external_format' configuration argument
      and the usage of an 'output' configuration argument in cloudi_request
    * Add destination_set configuration argument to cloudi_service_tcp