@@ -63,13 +63,16 @@
 
 -include_lib("cloudi_core/include/cloudi_logger.hrl").
 
+-define(DEFAULT_DEBUG,                      false). % log output for debugging
+-define(DEFAULT_DEBUG_LEVEL,                trace).
+
 -type method() :: 'GET' | 'POST' | 'PUT' | 'DELETE' | 'HEAD' | 'OPTIONS' |
                   'PATCH' | 'TRACE' | 'CONNECT'.
 
 -type handler_f_11() :: fun((Method :: method(),
                              Path :: cloudi:service_name_pattern(),
                              Parameters :: list(string()),
-                             Format :: string(),
+                             Format :: atom(),
                              RequestInfo :: any(),
                              Request :: any(),
                              Timeout :: cloudi:timeout_value_milliseconds(),
@@ -87,14 +90,21 @@
      NextPriority :: cloudi:priority_value(), NewState :: any()} |
     {noreply, NewState :: any()} |
     {stop, Reason :: any(), NewState :: any()}).
+-type terminate_f() :: fun((Reason :: any(),
+                            Timeout :: cloudi:timeout_value_milliseconds(),
+                            State :: any()) ->
+                           ok).
+-export_type([method/0,
+              handler_f_11/0,
+              terminate_f/0]).
 
 -record(api,
     {
         method :: method(),
         path :: cloudi:service_name_pattern(),
         parameters :: boolean(),
-        format :: string(),
-        handler :: handler_f_11(),
+        format :: atom(),
+        handler_f :: handler_f_11(),
         arity :: 11
     }).
 
@@ -102,6 +112,8 @@
     {
         prefix :: cloudi:service_name_pattern(),
         lookup :: cloudi_x_trie:cloudi_x_trie(),
+        terminate_f :: terminate_f() | undefined,
+        debug_level :: off | trace | debug | info | warn | error | fatal,
         api_state :: any()
     }).
 
@@ -116,16 +128,57 @@
 cloudi_service_init(Args, Prefix, Timeout, Dispatcher) ->
     Defaults = [
         {initialize,               undefined},
+        {terminate,                undefined},
         {handlers,                 undefined},
-        {formats,                  undefined}],
-    [Initialize, Handlers, Formats | ArgsAPI] =
+        {formats,                  undefined},
+        {debug,                    ?DEFAULT_DEBUG},
+        {debug_level,              ?DEFAULT_DEBUG_LEVEL}],
+    [Initialize, Terminate0, Handlers, Formats0,
+     Debug, DebugLevel | ArgsAPI] =
         cloudi_proplists:take_values(Defaults, Args),
+    TerminateN = case Terminate0 of
+        {TerminateModule, TerminateFunction}
+            when is_atom(TerminateModule),
+                 is_atom(TerminateFunction) ->
+            true = erlang:function_exported(TerminateModule,
+                                            TerminateFunction, 3),
+            fun(TerminateArg1, TerminateArg2, TerminateArg3) ->
+                TerminateModule:
+                TerminateFunction(TerminateArg1, TerminateArg2,
+                                  TerminateArg3)
+            end;
+        _ when is_function(Terminate0, 3) ->
+            Terminate0;
+        undefined ->
+            undefined
+    end,
     true = is_list(Handlers),
-    true = is_list(Formats),
+    true = is_list(Formats0),
+    true = ((Debug =:= true) orelse
+            (Debug =:= false)),
+    true = ((DebugLevel =:= trace) orelse
+            (DebugLevel =:= debug) orelse
+            (DebugLevel =:= info) orelse
+            (DebugLevel =:= warn) orelse
+            (DebugLevel =:= error) orelse
+            (DebugLevel =:= fatal)),
+    DebugLogLevel = if
+        Debug =:= false ->
+            off;
+        Debug =:= true ->
+            DebugLevel
+    end,
     ContentTypes = cloudi_response_info:lookup_content_type(),
-    lists:foreach(fun(Format) ->
-        true = cloudi_x_trie:is_key("." ++ Format, ContentTypes)
-    end, Formats),
+    FormatsN = lists:map(fun(Format0) ->
+        FormatN = if
+            is_list(Format0), is_integer(hd(Format0)) ->
+                Format0;
+            is_atom(Format0) ->
+                erlang:atom_to_list(Format0)
+        end,
+        true = cloudi_x_trie:is_key("." ++ FormatN, ContentTypes),
+        FormatN
+    end, Formats0),
     LookupN = lists:foldl(fun({Method, Path, Handler0}, Lookup0) ->
         {Handler1, Arity} = case Handler0 of
             {HandlerModule, HandlerFunction}
@@ -149,12 +202,14 @@ cloudi_service_init(Args, Prefix, Timeout, Dispatcher) ->
         API = #api{method = Method,
                    path = Path,
                    parameters = lists:member($*, Prefix ++ Path),
-                   handler = Handler1,
+                   handler_f = Handler1,
                    arity = Arity},
-        subscribe_paths(Method, Path, Formats, API, Lookup0, Dispatcher)
+        subscribe_paths(Method, Path, FormatsN, API, Lookup0, Dispatcher)
     end, cloudi_x_trie:new(), Handlers),
     State = #state{prefix = Prefix,
-                   lookup = LookupN},
+                   lookup = LookupN,
+                   terminate_f = TerminateN,
+                   debug_level = DebugLogLevel},
     ReturnAPI = case Initialize of
         {InitializeModule, InitializeFunction}
             when is_atom(InitializeModule),
@@ -181,6 +236,7 @@ cloudi_service_handle_request(_Type, Name, Pattern, RequestInfo, Request,
                               Timeout, Priority, TransId, _Pid,
                               #state{prefix = Prefix,
                                      lookup = Lookup,
+                                     debug_level = DebugLevel,
                                      api_state = StateAPI} = State,
                               Dispatcher) ->
     Suffix = cloudi_service_name:suffix(Prefix, Pattern),
@@ -188,13 +244,23 @@ cloudi_service_handle_request(_Type, Name, Pattern, RequestInfo, Request,
          path = Path,
          parameters = Parameters,
          format = Format,
-         handler = Handler,
+         handler_f = Handler,
          arity = Arity} = cloudi_x_trie:fetch(Suffix, Lookup),
     ParametersL = if
         Parameters =:= true ->
             cloudi_service_name:parse(Name, Pattern);
         Parameters =:= false ->
             []
+    end,
+    if
+        DebugLevel =:= off ->
+            ok;
+        RequestInfo /= <<>> ->
+            protocol_debug_log(DebugLevel, "request ~p ~p",
+                               [Name, {RequestInfo, Request}]);
+        true ->
+            protocol_debug_log(DebugLevel, "request ~p ~p",
+                               [Name, Request])
     end,
     ReturnAPI = if
         Arity == 11 ->
@@ -203,16 +269,46 @@ cloudi_service_handle_request(_Type, Name, Pattern, RequestInfo, Request,
     end,
     case ReturnAPI of
         {reply, Response, NewStateAPI} ->
+            if
+                DebugLevel =:= off ->
+                    ok;
+                true ->
+                    protocol_debug_log(DebugLevel, "response ~p ~p",
+                                       [Name, Response])
+            end,
             {reply, Response,
              State#state{api_state = NewStateAPI}};
         {reply, ResponseInfo, Response, NewStateAPI} ->
+            if
+                DebugLevel =:= off ->
+                    ok;
+                true ->
+                    protocol_debug_log(DebugLevel, "response ~p ~p",
+                                       [Name, {ResponseInfo, Response}])
+            end,
             {reply, ResponseInfo, Response,
              State#state{api_state = NewStateAPI}};
         {forward, NextName, NextRequestInfo, NextRequest, NewStateAPI} ->
+            if
+                DebugLevel =:= off ->
+                    ok;
+                true ->
+                    protocol_debug_log(DebugLevel, "forward ~p to ~p ~p",
+                                       [Name, NextName,
+                                        {NextRequestInfo, NextRequest}])
+            end,
             {forward, NextName, NextRequestInfo, NextRequest,
              State#state{api_state = NewStateAPI}};
         {forward, NextName, NextRequestInfo, NextRequest,
          NextTimeout, NextPriority, NewStateAPI} ->
+            if
+                DebugLevel =:= off ->
+                    ok;
+                true ->
+                    protocol_debug_log(DebugLevel, "forward ~p to ~p ~p",
+                                       [Name, NextName,
+                                        {NextRequestInfo, NextRequest}])
+            end,
             {forward, NextName, NextRequestInfo, NextRequest,
              NextTimeout, NextPriority,
              State#state{api_state = NewStateAPI}};
@@ -226,7 +322,15 @@ cloudi_service_handle_info(Request, State, _Dispatcher) ->
     ?LOG_WARN("Unknown info \"~p\"", [Request]),
     {noreply, State}.
 
-cloudi_service_terminate(_Reason, _Timeout, #state{}) ->
+cloudi_service_terminate(Reason, Timeout,
+                         #state{terminate_f = TerminateF,
+                                api_state = StateAPI}) ->
+    if
+        TerminateF =:= undefined ->
+            ok;
+        true ->
+            (catch TerminateF(Reason, Timeout, StateAPI))
+    end,
     ok.
 
 %%%------------------------------------------------------------------------
@@ -239,7 +343,8 @@ subscribe_path([Format | Formats], Path, MethodSuffix, API,
                Lookup, Dispatcher) ->
     Suffix = Path ++ "." ++ Format ++ MethodSuffix,
     ok = cloudi_service:subscribe(Dispatcher, Suffix),
-    NewLookup = cloudi_x_trie:store(Suffix, API#api{format = Format}, Lookup),
+    NewAPI = API#api{format = erlang:list_to_atom(Format)},
+    NewLookup = cloudi_x_trie:store(Suffix, NewAPI, Lookup),
     subscribe_path(Formats, Path, MethodSuffix, API,
                    NewLookup, Dispatcher).
 
@@ -262,3 +367,15 @@ subscribe_paths('TRACE', Path, Formats, API, Lookup, Dispatcher) ->
 subscribe_paths('CONNECT', Path, Formats, API, Lookup, Dispatcher) ->
     subscribe_path(Formats, Path, "/connect", API, Lookup, Dispatcher).
 
+protocol_debug_log(trace, Message, Args) ->
+    ?LOG_TRACE(Message, Args);
+protocol_debug_log(debug, Message, Args) ->
+    ?LOG_DEBUG(Message, Args);
+protocol_debug_log(info, Message, Args) ->
+    ?LOG_INFO(Message, Args);
+protocol_debug_log(warn, Message, Args) ->
+    ?LOG_WARN(Message, Args);
+protocol_debug_log(error, Message, Args) ->
+    ?LOG_ERROR(Message, Args);
+protocol_debug_log(fatal, Message, Args) ->
+    ?LOG_FATAL(Message, Args).
