@@ -1,6 +1,13 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2015-09-04 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add terminate, debug and debug_level configuration arguments to
+      cloudi_service_http_rest
+    * Improve example hello_world5
+    * Fix README file
+
 2015-09-03 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add msgpack as a supported content-type
